   HBASE-2249  The PerformanceEvaluation read tests don't take the MemStore
               into account
   HBASE-2249  The PerformanceEvaluation read tests don't take the MemStore
               into account
   HBASE-2277  Update branch to hadoop 0.20.2
   HBASE-2234  Roll Hlog if any datanode in the write pipeline dies
               (Nicolas Spiegelberg via Stack)

  NEW FEATURES
   HBASE-2257  [stargate] multiuser mode
   HBASE-2263  [stargate] multiuser mode: authenticator for zookeeper
   HBASE-2273  [stargate] export metrics via Hadoop metrics, JMX, and zookeeper
   HBASE-2274  [stargate] filter support: JSON descriptors
   HBASE-2298  Backport of "HLog Group Commit" to 0.20 branch
               (Nicolas Spiegelberg via Stack)

Release 0.20.3 - January 25th, 2010
  INCOMPATIBLE CHANGES

  BUG FIXES
   HBASE-1999  When HTable goes away, close zk session in shutdown hook or
               something...
   HBASE-1997  zk tick time bounds maximum zk session time
   HBASE-1979  MurmurHash does not yield the same results as the reference
               C++ implementation when size % 4 >= 2 (Olivier Gillet via Stack)
   HBASE-1994  Master will lose hlog entries while splitting if region has
               empty oldlogfile.log (Lars George via Stack)
   HBASE-2022  NPE in housekeeping kills RS
   HBASE-2033  Shell scan 'limit' is off by one
   HBASE-2034  [Bulk load tools] loadtable.rb calls an undefined method
               `descendingIterator' (Ching-Shen Chen via Stack)
   HBASE-2043  Shell's scan broken
   HBASE-2047  Example command in the "Getting Started" 
               documentation doesn't work (Benoit Sigoure via JD)
   HBASE-2048  Small inconsistency in the "Example API Usage"
               (Benoit Sigoure via JD)
   HBASE-1960  Master should wait for DFS to come up when creating 
               hbase.version
   HBASE-2054  memstore size 0 is >= than blocking -2.0g size
   HBASE-2064  Cannot disable a table if at the same the Master is moving 